# axor-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
axor_cli/: __init__.py  _version.py  adapters.py  auth.py  display.py  hooks.py  images.py  main.py  mcp_config.py  memory_provider.py  permissions.py  routing_config.py  session_store.py  skill_commands.py  streaming.py  telemetry.py
tests/: conftest.py
tests/unit/: test_adapters.py  test_auth.py  test_display.py  test_hooks.py  test_permissions.py  test_smoke.py  test_telemetry_bridge.py  test_version.py
